# profitis

./: README.md
profiserve/: Cargo.toml
profiserve/src/: main.rs  models.rs  routes.rs  state.rs
profiserve/src/handlers/: history.rs  mod.rs  stocks.rs
profisync/: Cargo.toml
profisync/src/: main.rs  models.rs  profiserve_client.rs  sync_service.rs  yahoo_finance.rs
